--- a/alternate.css
+++ b/alternate.css
@@ -13,22 +13,31 @@ body {
 }
 
 #pager {
-    max-width: 100%;
-    height: 50px;
-    position: fixed;
-    border: 2px solid gray;
+    width: 100%;
+    height: 35px;
+    border: 5px solid gray;
     background-color: lime;
-}
-
-#menu {
     text-align: center;
-    font-size: 20px;
-    color: darkseagreen;
+    padding-top: 15px;
 }
 
-.list-item-pager {   
+.list-item-pager {
+    border: 2px solid gray;
+    background-color:lightblue;
+    padding: 2px;
     list-style-type: none;
-    text-align: center;
+    display: inline;
+}
+
+#menu{
+    float: left;
+    text-align: left;
+    font-size: 20px;
+    color: red;
+}
+
+.inline {
+    display: inline;
 }
 
 #title {
