--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body{
 }
 
 #menu {
+    display: none;
     text-align: center;
     font-size: 20px;
     color: darkseagreen;
@@ -133,4 +134,16 @@ a{
 
 a:hover{
     color:red;
+}
+
+@media (max-width: 1200px) {
+      #menu{
+          display:block;
+      }
+      #pager ul {
+          display: none;
+      }
+      #pager:hover ul {
+          display: block;
+      }
 }
